src/components/admin/Teams/index.module.scss
@import '~/styles/variables.scss';
@import '~/styles/mixins.scss';

.dialog {
	display: flex;
	align-items: center;
	width: 75%;
	border-radius: 25px;
	padding: 2rem;
	margin: 0 auto;
	flex-direction: column;
	background-image: $dialog-container-gradient;
	box-shadow: $dialog-container-box-shadow;
	backdrop-filter: blur(4px);

	max-height: 70%;
	overflow: scroll;

	@include down($breakpoint-md) {
		width: 80%;
	}

	@include down($breakpoint-sm) {
		width: 70%;
	}
}

.dialogContent {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
}

.spinnerContainer {
	display: flex;
	justify-content: center;
}

.buttonMargin {
	margin-right: 1em;
	&:nth-child(n+3) {
		margin-bottom: 1em;
	}
}

.toolbar {
	width: 100%;
	justify-content: end;
}

.toolbarContent {
	display: flex;
	flex-direction: row;
	gap: 1em;
	padding-right: 1em;
}

.table {
	width: 100%;
}

.chipMargin {
	margin-right: 0.5em;
}

.chipUnverified {
	&:global(.MuiChip-root) {
		background-color: $status-color-unverified;
	}
}

.chipVerified {
	&:global(.MuiChip-root) {
		background-color: $status-color-verified;
	}
}

.chipApplied {
	&:global(.MuiChip-root) {
		background-color: $status-color-applied;
	}
}

.chipAdmitted {
	&:global(.MuiChip-root) {
		background-color: $status-color-admitted;
	}
}

.chipRejected {
	&:global(.MuiChip-root) {
		background-color: $status-color-rejected;
	}
}

.chipDeclined {
	&:global(.MuiChip-root) {
		background-color: $status-color-declined;
	}
}

.chipConfirmed {
	&:global(.MuiChip-root) {
		background-color: $status-color-confirmed;
	}
}

.buttonContainer {
	display: flex;
	gap: 5px;
}

.withIcon {
	display: flex;
	align-items: center;
	justify-content: space-around;
}

.editIcon {
	cursor: pointer;
}

